Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 9887
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Not yet assigned to anyone <unassigned@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: isak@hypergene.com
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 9887 depends on: Show dependency tree
Show dependency graph
Bug 9887 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: Opened: 2003-02-28 14:06
The type of a member funtion template can't be specified explicitly when called
from the context of a funtion template where the class of the member function
is a template argument. G++ gives a syntax error.

Preprocessed source:
# 1 "t.cc"
# 1 "<built-in>"
# 1 "<command line>"
# 1 "t.cc"
class A {
public:
  template<typename V>
  void f() {
  }
};

template<typename T>
void g(T x) {
  x.f<int>(); // syntax error
}

void h() {
  A a;
  a.f<int>(); // ok
  g(a);
}

Command line: g++ -v -save-temps -c -Wall t.cc

Output:
Reading specs from /usr/lib/gcc-lib/i386-linux/3.2.3/specs
Configured with: ../src/configure -v
--enable-languages=c,c++,java,f77,proto,pascal,objc,ada --prefix=/usr
--mandir=/usr/share/man --infodir=/usr/share/info
--with-gxx-include-dir=/usr/include/c++/3.2 --enable-shared --with-system-zlib
--enable-nls --without-included-gettext --enable-__cxa_atexit
--enable-clocale=gnu --enable-java-gc=boehm --enable-objc-gc i386-linux
Thread model: posix
gcc version 3.2.3 20030210 (Debian prerelease)
 /usr/lib/gcc-lib/i386-linux/3.2.3/cpp0 -lang-c++ -D__GNUG__=3 -D__DEPRECATED
-D__EXCEPTIONS -v -D__GNUC__=3 -D__GNUC_MINOR__=2 -D__GNUC_PATCHLEVEL__=3
-D__GXX_ABI_VERSION=102 -D__ELF__ -Dunix -D__gnu_linux__ -Dlinux -D__ELF__
-D__unix__ -D__gnu_linux__ -D__linux__ -D__unix -D__linux -Asystem=posix
-D__NO_INLINE__ -D__STDC_HOSTED__=1 -D_GNU_SOURCE -Acpu=i386 -Amachine=i386
-Di386 -D__i386 -D__i386__ -D__tune_i386__ t.cc -Wall t.ii
GNU CPP version 3.2.3 20030210 (Debian prerelease) (cpplib) (i386 Linux/ELF)
ignoring nonexistent directory "/usr/i386-linux/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/include/c++/3.2
 /usr/include/c++/3.2/i386-linux
 /usr/include/c++/3.2/backward
 /usr/local/include
 /usr/lib/gcc-lib/i386-linux/3.2.3/include
 /usr/include
End of search list.
 /usr/lib/gcc-lib/i386-linux/3.2.3/cc1plus -fpreprocessed t.ii -quiet -dumpbase
t.cc -Wall -version -o t.s
GNU CPP version 3.2.3 20030210 (Debian prerelease) (cpplib) (i386 Linux/ELF)
GNU C++ version 3.2.3 20030210 (Debian prerelease) (i386-linux)
        compiled by GNU C version 3.2.3 20030210 (Debian prerelease).
t.cc: In function `void g(T)':
t.cc:10: syntax error before `>' token

Release:
GNU C++ version 3.2.3 20030210

Environment:
Debian GNU/Linux unstable on Intel Celeron machine with 256MB RAM.

How-To-Repeat:
See description.

------- Comment #1 From isak@hypergene.com 2003-02-28 14:06 -------
Fix:
This an be used as a workaround:

template<typename T, typename V>
struct X {
  static void f(T x) {
    x.f<V>();
  }
};

template<typename T>
void g2(T x) {
  X<T, int>::f(a);
}

------- Comment #2 From Wolfgang Bangerth 2003-03-03 15:17 -------
State-Changed-From-To: open->closed
State-Changed-Why: Not a bug. You need to write
        x.template f<int>(); // syntax error
    (note the "template" keyword here).
    
    W.

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug