Fix compilation under OpenBSD 4.2 / gcc 3.3.5:  Dependent qualified names referring to templates must use  the "template" keyword in their last component.

Please refer to:
 http://gcc.gnu.org/bugzilla/show_bug.cgi?id=9887
 http://womble.decadentplace.org.uk/c++/template-faq.html#disambiguation

Requested by:	Pavlin Radoslavov


git-svn-id: https://xorp.svn.sourceforge.net/svnroot/xorp@11187 26435e26-4b25-483a-942d-477236992e84